Added mute functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
   <!-- Main App JS -->
-  <script src="src/angular-video-bg.js"></script>
+  <script src="angular-video-bg.js"></script>
   <!-- Add New Component JS Above -->
 
   <div>
