Added better documentation, fixed a few bugs
Updated the documentation to be quite a bit better. I also updated the
directive to support multiple video backgrounds on the same page, added
an end property so that you can optionally end a video early and only
play a short segment, and fixed an issue where the video was not
centering if the width of the container was smaller than the width of
the video.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
   <div>
       <video-bg video-id="'M7lc1UVf-VE'">
-          <p style="padding: 100px;">Testing transclude!</p>
+          <p style="padding: 200px 0;">Testing transclude!</p>
+      </video-bg>
+  </div>
+  <div>
+      <video-bg video-id="'cqcldOyEYRE'">
+          <p style="padding: 200px 0;">Testing transclude 2!</p>
       </video-bg>
   </div>
 
