Fixed a couple of bugs

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
   <!-- Add New Component JS Above -->
 
   <div>
-      <video-bg video-id="'M7lc1UVf-VE'">
-          <p style="padding: 200px 0;">Testing transclude!</p>
-      </video-bg>
+      <video-bg video-id="'M7lc1UVf-VE'"></video-bg>
+      <p style="padding: 200px 0;">Testing transclude!</p>
   </div>
   <div>
       <video-bg video-id="'cqcldOyEYRE'">
