--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <section class="page-header">
+        <video-bg video-id="'cqcldOyEYRE'"></video-bg>
       <h1 class="project-name">Angular-video-bg</h1>
       <h2 class="project-tagline">An Angular.js YouTube video background player directive that stresses simplicity and performance.</h2>
       <a href="https://github.com/kanzelm3/angular-video-bg" class="btn">View on GitHub</a>
@@ -152,6 +153,8 @@ video ID.</p>
 
     </section>
 
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-video-bg/angular-video-bg.min.js"></script>
             <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
