--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us" ng-app="angularVideoBg">
   <head>
     <meta charset="UTF-8">
     <title>Angular-video-bg by kanzelm3</title>
