--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   </head>
   <body>
     <section class="page-header">
-        <video-bg video-id="'iNJdPyoqt8U'"></video-bg>
-        <h1 class="project-name">Angular-video-bg</h1>
-        <h2 class="project-tagline">An Angular.js YouTube video background player directive that stresses simplicity and performance.</h2>
-        <a href="https://github.com/kanzelm3/angular-video-bg" class="btn">View on GitHub</a>
-        <a href="https://github.com/kanzelm3/angular-video-bg/zipball/master" class="btn">Download .zip</a>
-        <a href="https://github.com/kanzelm3/angular-video-bg/tarball/master" class="btn">Download .tar.gz</a>
+        <video-bg video-id="'iNJdPyoqt8U'">
+            <h1 class="project-name">Angular-video-bg</h1>
+            <h2 class="project-tagline">An Angular.js YouTube video background player directive that stresses simplicity and performance.</h2>
+            <a href="https://github.com/kanzelm3/angular-video-bg" class="btn">View on GitHub</a>
+            <a href="https://github.com/kanzelm3/angular-video-bg/zipball/master" class="btn">Download .zip</a>
+            <a href="https://github.com/kanzelm3/angular-video-bg/tarball/master" class="btn">Download .tar.gz</a>
+        </video-bg>
     </section>
 
     <section class="main-content">
