--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
 
 <ul>
-<li><a href="https://github.com/kanzelm3/angular-video-bg/archive/0.1.3.zip">Version 0.1.3</a></li>
+<li>You can always download the latest version on <a href="https://github.com/kanzelm3/angular-video-bg">GitHub</a></li>
 </ul>
 
 <p>You can also install the package using <a href="http://bower.io">Bower</a>.</p>
