Update to GitHub URL

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
       <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-      <script type="text/javascript" src="bower_components/angular-video-bg/angular-video-bg.min.js"></script>
+      <script type="text/javascript" src="//raw.githubusercontent.com/kanzelm3/angular-video-bg/master/angular-video-bg.min.js"></script>
   </head>
   <body>
     <section class="page-header">
