--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <section class="page-header">
-        <video-bg video-id="'iNJdPyoqt8U'">
+        <video-bg video-id="'sLprVF6d7Ug'" mute="false">
             <h1 class="project-name">Angular-video-bg</h1>
             <h2 class="project-tagline">An Angular.js YouTube video background player directive that stresses simplicity and performance.</h2>
             <a href="https://github.com/kanzelm3/angular-video-bg" class="btn">View on GitHub</a>
