This resolves #1, as well displays thumbnail while video loads

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Add New Component JS Above -->
 
   <div>
-      <video-bg video-id="'M7lc1UVf-VE'"></video-bg>
+      <video-bg video-id="'zk9Acw-vmUs'"></video-bg>
       <p style="padding: 200px 0;">Testing transclude!</p>
   </div>
   <div>
