--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
           $scope.videoId = 'nfWlot6h_JM';
 
+          $scope.videos = [{
+              videoId: 'nfWlot6h_JM',
+              start: 30,
+              end: 40
+          }];
+
           $scope.callback = function(player) {
               $scope.pauseVideo = function() {
                   player.pauseVideo();
@@ -36,13 +42,18 @@
 
           $scope.changeVideo = function() {
               $scope.videoId = 'Xa0Q0J5tOP0';
+              $scope.videos.push({
+                  videoId: 'Xa0Q0J5tOP0',
+                  start: 30,
+                  end: 40
+              });
           };
 
       }]);
   </script>
 
   <div ng-controller="VideoCtrl">
-      <video-bg video-id="videoId" player-callback="callback(player)"></video-bg>
+      <video-bg playlist="videos" player-callback="callback(player)"></video-bg>
       <p style="padding: 200px 0;">Testing transclude!</p>
       <button type="button" ng-click="changeVideo()">Change Video</button>
       <button type="button" ng-click="pauseVideo()" ng-show="pauseVideo">Pause Video</button>
